--- a/ProjectIndex.html
+++ b/ProjectIndex.html
@@ -30,9 +30,9 @@
         <div id="TopRight">
             <button class="TopItems"><a class="TopLinks" href="ProjectIndex.html">Home</a></button>
             <button class="TopItems"><a class="TopLinks" href="ProjectIndex.html#page2">Education</a></button>
-            <button class="TopItems"><a class="TopLinks" href="portfolio.html" targext="main">Portfolio</a></button>
+            <button class="TopItems"><a class="TopLinks" href="behance.net/archit80" targext="main">Portfolio</a></button>
             
-            <button class="TopItems"><a class="TopLinks" href="#text-center-p-3">Connect</a></button>
+            <button class="TopItems"><a class="TopLinks" href="wwww.linkedin.com/in/archit80">Connect</a></button>
         </div>          
     </div>
 
